<resources>
    <string name="app_name">Calculadora PDM 2020 2</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="sete">7</string>
    <string name="ce">CE</string>
    <string name="tres">3</string>
    <string name="seis">6</string>
    <string name="cinco">5</string>
    <string name="quatro">4</string>
    <string name="nove">9</string>
    <string name="oito">8</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="plus_minus">±</string>
    <string name="c">C</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="comma">,</string>
    <string name="backspace"><![CDATA[<-]]></string>
    <string name="site_ifsp">Site IFSP</string>
    <string name="chamar_ifps">Chamar Ifps</string>
    <string name="tipo_calculadora">Tipo Calculadora</string>
    <string name="avancada">Avançada</string>
    <string name="basica">Básica</string>
    <string name="raiz_quadrada">√</string>
    <string name="salvar">Salvar</string>
    <string name="potencia">^</string>
</resources>